--- a/todo-app/src/components/TodoListItem.scss
+++ b/todo-app/src/components/TodoListItem.scss
@@ -1,10 +1,17 @@
+.TodoListItem-virtualized {
+  // 엘리먼트들 사이사이에 테두리 넣어줌
+  & + & {
+    border-top: 1px solid #dee2e6;
+  }
+  &:nth-child(even) {
+    background-color: #f8f9fa;
+  }
+}
+
 .TodoListItem {
   padding: 1rem;
   display: flex;
   align-items: center;
-  &:nth-child(even) {
-    background: #f8f9fa;
-  }
 
   .checkbox {
     cursor: pointer;
@@ -39,10 +46,5 @@
     &:hover {
       color: #ff8787;
     }
-  }
-
-  // 엘리먼트들 사이사이에 테두리 넣어줌
-  & + & {
-    border-top: 1px solid #dee2e6;
   }
 }
